CHANGELOG

2.0.31
UTILS:
* pan-os-php type=xml-issue | extend fix for custom-url-category
* UTIL type=application | introduce new 'filters=( decoder has XYZ )' / (decoder is.set)
* UTIL type=securityprofile securityprofiletype=custom-url-category | actions=exporttoexcel introduce display of member information
* UTIL BETA ssh_connector.php | extend with argument setcommand-maxline=20

BUGFIX:
* UTIL type=diff | replace derr() with mwarning() - fix for argument outputformatset
* class SecurityProfilStore | bugfix to handle parentStore correctly
* UTIL type=securityprofile | bugfix missing array variable declaration
* UTIL type=rule | bugfix for 'filter=(service has.value.recursive PORT-RANGE)'
* UTIL type=rule 'filter=(service has.value.recursive PORT-RANGE)' | bugfix if searched PORT-RANGE is partial available, and if multiple port-range are available in service-group
* UTIL type=rule | bugfix for 'filter=(service has.value.recursive PORT-RANGE)' to match if two different nested groups has combined the filtered PORT-RANGE

GENERAL:
* framework all Object Classes | improve code for usage of single method parentCentralStore()

2.0.30 (20220221)
UTILS:
* UTIL pan-os-php type=device | introduce actions=find-zone-from-IP:IPADDRESS (working on devicetype=virtualsystem / manageddevice)
* UTIL pan-os-php type=xml-to-json | improve for cycleconnectedfirewalls
* UTIL pan-os-php type=address/service | introduce actions=create-address/create-addressgroup - actions=create-service/create-servicegroup
* UTIL type=config-size | extend big XML nodes with information about how many objects are available
* UTIL pan-os-php | introduce type=config-commit - class CONFIG_COMMIT__.php , extend bash-autocompletion
* UTIL all object merger | improve output which object get delete if ancestor is found
* UTIL pan-os-php type=securityprofile | introduce 'actions=custom-url-category-add-ending-token' for securityProfileType=custom-url-category